src/styles.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

body {
  padding: 0 clamp(10%, 20%, 30%) 0 clamp(10%, 20%, 30%);
}
.messages {
  height: 4vh;
  width: 60%;
  background: #f8f8f8;
  text-align: center;
  font-size: 14px;
  padding: 0.5rem;
}
.pass-device {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: lightblue;
  font-size: 96px;
  color: white;
  padding: 20%;
}
.hidden {
  display: none;
}
#root,
#__next {
  isolation: isolate;
}

.game {
  display: flex;
  gap: 40px;
  justify-content: center;
  align-items: center;
  width: fit-content;
}

.header {
  display: flex;
  align-items: center;
  justify-content: start;
  margin-bottom: 5vh;
  gap: 10%;
}

.battlefield_container {
  flex-shrink: 0;
  display: grid;
  grid-template-columns: repeat(11, 1fr);
  grid-auto-rows: repeat(11, 1fr);
  z-index: 1000;
}
.battlefield {
  grid-row: 2 / 11;
  grid-column: 2 / 11;
  display: flex;
  flex-direction: column;
  width: fit-content;
  border: 0.00125rem solid rgb(160, 160, 255);
  background: white;
  z-index: -1000
}

.row {
  display: flex;
  border-bottom: 0.00125rem solid rgb(160, 160, 255);
}
.row:last-child {
  border-bottom: none;
}
.cell {
  width: 3vh;
  height: 3vh;
  display: flex;
  justify-content: center;
  align-items: center;
  border-right: 0.0625rem solid rgb(160, 160, 255);
}
.cell:last-child {
  border-right: none !important;
}

.hit::after {
  content: "❌";
  font-size: clamp(4px, 100%, 12px);
}
.missed-hit::after {
  color: gray;
  font-size: 0.625rem;
  content: "●";
}
.battlefield_opponent .cell:hover {
  cursor: pointer;
  border: none;
  background: #d0f0c0;
  opacity: 0.4;
  border: 2px solid lightgreen;
}
.cell.hit {
  border: 2px solid #00f;
  background: rgba(0, 0, 255, 0.05);
}

.header-item {
  width: 3vh;
  height: 3vh;
  text-align: center;
  font-size: 12px;
}
.col-header {
  display: flex;
  grid-column: 2 / 11;
  grid-row: 1;
}
.row-header {
  display: flex;
  flex-direction: column;
  grid-column: 1;
  grid-row: 3 / 11;
}

.desp {
  grid-column: 5 / 11;
  grid-row: 12;
  padding: 4px;
}
.static {
  border: 2px solid #00f;
}
.cell.horizontal-head {
  border-left: 2px solid #00f;
}

.cell.horizontal-tail {
  border-right: 2px solid #00f !important;
}
.cell.horizontal-body {
  border-top: 2px solid #00f;
  border-bottom: 2px solid #00f;
}

.cell.vertical-head {
  border-top: 2px solid #00f;
}
.cell.vertical-tail {
  border-bottom: 2px solid #00f;
}
.cell.vertical-body {
  border-left: 2px solid #00f;
  border-right: 2px solid #00f;
}

.start-game,
.ready-game {
  grid-column: 2 / 11;
  grid-row: 2 / 11;
  position: relative;
  background: rgba(255, 255, 255, 0.8);
  position: relative;
}

#startGame,
#ready {
  position: relative;
  top: 20px;
  background: lightgreen;
  width: 60px;
  padding: 5px;
  font-size: 18px;
  border: none;
}
#ready {
  width: fit-content;
}
input[type="radio"] {
  opacity: 0;
  position: fixed;
  width: 0;
}

input[type="radio"]:checked + label {
  background: #f8f8f8;
  padding: 4px;
  text-decoration: underline;
}

label,
button {
  cursor: pointer;
  position: relative;
}

legend {
  font-size: 18px;
  font-weight: semi-bold;
}
fieldset {
  border: none;
  font-size: 16px;
}
div[draggable="true"] {
  cursor: move; /* fallback if grab cursor is unsupported */
  cursor: grab;
  cursor: -moz-grab;
  cursor: -webkit-grab;
}

#randomise,
#reset {
  background: none;
  border: none;
  color: blue;
}

#randomise:hover,
#reset:hover {
  color: lightgreen;
}

.b-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.rules > p {
  margin-top: 2%;
  padding: 5px;
  background: lightgreen;
  border-radius: 5px;
  color: green;
}
.container {
  background: white;
  padding: 5% 5%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}
.description {
  flex-grow: 1;
}
.footer {
  margin-top: 2%;
  border-top: 1px solid gray;
}
@media screen and (max-width: 768px) {
  body {
    padding: 2% 10% 0 10%;
  }
  .game {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}

